src/assets/scss/theme/_overlay.scss
/* ... */
//----------------------------------------------------------//
//	BOTTOM OVERLAY
//----------------------------------------------------------//
.bottom-overlay {
  position: relative;
  &::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 50%;
    background: linear-gradient(
      to top,
      rgba($gray-900, 0.8) 0%,
      rgba($gray-900, 0.5) 50%,
      transparent 100%
    );
    pointer-events: none;
    z-index: 2;
  }
  > * {
    position: relative;
    z-index: 3;
  }
  img {
    position: relative;
    z-index: 1;
  }
  figcaption {
    position: relative;
    z-index: 3;
  }
}

